--- a/index.html
+++ b/index.html
@@ -17,16 +17,34 @@
 <div class="main">
     <div class="learn">
        <h3>Learning Resources</h3>
-       <p>The primary reason to follow principles is to give predictability, stay safe from mishaps
-           and avoid accidents. Let's look over 
-              <span id="line">
-            and study some fundamental rules and regulations,
-           one must follow to become a safe road user. </span>
+       <p>The primary reason to follow principles is to give predictability, stay safe from mishaps and avoid accidents. Let’s look over and study some fundamental rules and regulations, one must follow to become a safe road user.
        </p>
-    <img src="NoPath - Copy (8).png" alt="traffic-lights" srcset="" id="traffic">
-    <img src="NoPath - Copy (6).png" alt="walk-sign" srcset="" id="walk">
-    <img src="NoPath - Copy (10).png" alt="jail" srcset="" id="jail">
+       <div class = "container">
+       <div>
+        <img id="photo1" src="./NoPath - Copy (8).png">
+      </div>
+      <div>
+        <img id="photo2" src="./NoPath - Copy (6).png">
+      </div>
+      <div>
+        <img id="photo3" src="./NoPath - Copy (10).png">
+      </div>
     </div>
+    <div class = "container2">
+      <div id = "a" >
+       <p>Rules and Regulations</p>
+     </div>
+     <div id = "b">
+      <p>Signs to be taken care<br> of while on the road</p>
+     </div>
+     <div id = "c">
+      <p>Fine & Punishment</p>
+     </div>
+   </div>
+   <div class="theme-button">
+    <a href="#">Go to Test</a>
+  </div>
+  </div>
 </div>
 </body>
 </html>
