--- a/index.html
+++ b/index.html
@@ -43,8 +43,49 @@
    </div>
    <div class="theme-button">
     <a href="#">Go to Test</a>
+      </div>
   </div>
-  </div>
+
+  <footer>
+  
+     <div class="contact">
+       <h2>Contact Us</h2>
+       <p>
+       India Road Safety Campaign Solve
+     </p>
+     <span id="foo">
+       252A, Shahpur Jat, Delhi, 110049
+     </span> <br> <br>
+     <a href="#" > <img src="mail-black-envelope-symbol (1).svg" alt="" srcset=""> info@road-safety.co.in </a> <br> <br>
+     <a href="#"> <img src="global.svg" alt="" srcset=""> http://road-safety.co.in </a> <br><br>
+     <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" >
+     <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb"> 
+     <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta">   
+     </div>
+
+     <div class="road">
+       <img src="morth.png" alt="road-safety-logo" srcset="">
+       <img src="NoPath.png" alt="" srcset="" id="footlogo"> <br> <br>
+       <a href="#">http://morth-roadsafety.nic.in/</a> <br> <br>
+       <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" id="twitter">
+     <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb"> 
+     <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta"> 
+     </div>
+     <div class="mission">
+        <h2>Mission Road Safety</h2>
+        <p>A portal for road accident data</p>
+        <img src="NoPath - Copy@2x.png" alt="" srcset=""> <br><br>
+        <a href="#">www.missionroadsafety.com</a>
+     </div>
+    </div>
+  </footer>
 </div>
 </body>
 </html>
+
+<!-- samjh aai baat? arre hua kya? firse dikha. learn ki height kam karni h. wo ho nhi rhi. footer and learn 
+overlap kar rhe h.
+aur kuch? abhi tak to nhi. css mein daal dena kya?
+ohhh shit. Tune aise kardiya? Mere dimaag mei bas learn ko modify karna aa rha tha :/ 
+ye kya kiya tha tune?? Ek div ke andar 3no div daaal diye thee
+\conatct3 ki zarurat kyu padi? Main normally inline divs aise hi banata hun, ramdev ne bhi aise hi banaya!.-->
