--- a/index.html
+++ b/index.html
@@ -1,91 +1,91 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <title>Driving License Practice Test</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
+  <title>Driving License Practice Test</title>
 </head>
+
 <body>
-    <div class="navbar">
-      <img src="morth.png" alt="road-safety-logo" srcset="" id="road-safety-logo">
-      <p>
-        <strong>Driving License Practice Test</strong> 
-      </p>
-    </div>
-<div class="main">
-    <div class="learn">
-       <h3>Learning Resources</h3>
-       <p>The primary reason to follow principles is to give predictability, stay safe from mishaps and avoid accidents. Let’s look over and study some fundamental rules and regulations, one must follow to become a safe road user.
-       </p>
-       <div class = "container">
-       <div>
-        <img id="photo1" src="./NoPath - Copy (8).png">
-      </div>
-      <div>
-        <img id="photo2" src="./NoPath - Copy (6).png">
-      </div>
-      <div>
-        <img id="photo3" src="./NoPath - Copy (10).png">
-      </div>
-    </div>
-    <div class = "container2">
-      <div id = "a" >
-       <p>Rules and Regulations</p>
-     </div>
-     <div id = "b">
-      <p>Signs to be taken care<br> of while on the road</p>
-     </div>
-     <div id = "c">
-      <p>Fine & Punishment</p>
-     </div>
-   </div>
-   <div class="theme-button">
-    <a href="#">Go to Test</a>
-      </div>
+  <div class="navbar">
+    <img src="morth.png" alt="road-safety-logo" srcset="" id="road-safety-logo">
+    <p>
+      <strong>Driving License Practice Test</strong>
+    </p>
   </div>
+  <div class="main">
+    <div class="learn">
+      <h3>Learning Resources</h3>
+      <p>The primary reason to follow principles is to give predictability, stay safe from mishaps and avoid accidents.
+        Let’s look over and study some fundamental rules and regulations, one must follow to become a safe road user.
+      </p>
+      <div class="container blogs">
+        <div>
+          <img id="photo1" src="./NoPath - Copy (8).png">
+          <h2>Rules and Regulations</h2>
+        </div>
+        <div>
+          <img id="photo2" src="./NoPath - Copy (6).png">
+          <h2>Signs to be taken care<br> of while on the road</h2>
+        </div>
+        <div>
+          <img id="photo3" src="./NoPath - Copy (10).png">
+          <h2>Fine & Punishment</h2>
+        </div>
+      </div>
+      <div class="container2">
 
-  <footer>
-  
-     <div class="contact">
-       <h2>Contact Us</h2>
-       <p>
-       India Road Safety Campaign Solve
-     </p>
-     <span id="foo">
-       252A, Shahpur Jat, Delhi, 110049
-     </span> <br> <br>
-     <a href="#" > <img src="mail-black-envelope-symbol (1).svg" alt="" srcset=""> info@road-safety.co.in </a> <br> <br>
-     <a href="#"> <img src="global.svg" alt="" srcset=""> http://road-safety.co.in </a> <br><br>
-     <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" >
-     <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb"> 
-     <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta">   
-     </div>
 
-     <div class="road">
-       <img src="morth.png" alt="road-safety-logo" srcset="">
-       <img src="NoPath.png" alt="" srcset="" id="footlogo"> <br> <br>
-       <a href="#">http://morth-roadsafety.nic.in/</a> <br> <br>
-       <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" id="twitter">
-     <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb"> 
-     <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta"> 
-     </div>
-     <div class="mission">
+
+      </div>
+      <div class="theme-button">
+        <a href="#">Go to test</a>
+      </div>
+    </div>
+
+    <footer>
+
+      <div class="contact">
+        <h2>Contact Us</h2>
+        <p>
+          India Road Safety Campaign Solve
+        </p>
+        <span id="foo">
+          252A, Shahpur Jat, Delhi, 110049
+        </span> <br> <br>
+        <a href="#"> <img src="mail-black-envelope-symbol (1).svg" alt="" srcset=""> info@road-safety.co.in </a> <br>
+        <br>
+        <a href="#"> <img src="global.svg" alt="" srcset=""> http://road-safety.co.in </a> <br><br>
+        <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="">
+        <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb">
+        <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta">
+      </div>
+
+      <div class="road">
+        <img src="morth.png" alt="road-safety-logo" srcset="">
+        <img src="NoPath.png" alt="" srcset="" id="footlogo"> <br> <br>
+        <a href="#">http://morth-roadsafety.nic.in/</a> <br> <br>
+        <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" id="twitter">
+        <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb">
+        <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta">
+      </div>
+      <div class="mission">
         <h2>Mission Road Safety</h2>
         <p>A portal for road accident data</p>
         <img src="NoPath - Copy@2x.png" alt="" srcset=""> <br><br>
         <a href="#">www.missionroadsafety.com</a>
-     </div>
-    </div>
+      </div>
+  </div>
   </footer>
-</div>
+  </div>
 </body>
+
 </html>
 
-<!-- samjh aai baat? arre hua kya? firse dikha. learn ki height kam karni h. wo ho nhi rhi. footer and learn 
-overlap kar rhe h.
-aur kuch? abhi tak to nhi. css mein daal dena kya?
-ohhh shit. Tune aise kardiya? Mere dimaag mei bas learn ko modify karna aa rha tha :/ 
-ye kya kiya tha tune?? Ek div ke andar 3no div daaal diye thee
-\conatct3 ki zarurat kyu padi? Main normally inline divs aise hi banata hun, ramdev ne bhi aise hi banaya!.-->
+<!-- sun I'll show you a p. yic waisa banana h to ussi hisaab se changes karna. and assets ka page 
+h waha se sab refer karlio regrading font and color. samjjh aai baat?-->
+<!--  -->
