--- a/index.html
+++ b/index.html
@@ -66,12 +66,23 @@
       </div>
 
       <div class="road">
+        <div>
         <img src="morth.png" alt="road-safety-logo" srcset="">
-        <img src="NoPath.png" alt="" srcset="" id="footlogo"> <br> <br>
-        <a href="#">http://morth-roadsafety.nic.in/</a> <br> <br>
-        <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" id="twitter">
-        <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb">
-        <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta">
+
+        </div>
+        <div>
+        <img src="NoPath.png" alt="" srcset="" id="footlogo">
+
+     
+      </div>
+    <a href="#">http://morth-roadsafety.nic.in</a>
+
+    <div style="text-align: center;">
+    <img src="twitter-logo-button.svg" alt="twitter-logo-button" srcset="" id="twitter">
+    <img src="facebook-logo-button.svg" alt="facebook-logo-button" srcset="" id="fb">
+    <img src="instagram.svg" alt="instagram-logo" srcset="" id="insta">
+
+</div>
       </div>
       <div class="mission">
         <h2>Mission Road Safety</h2>
